# recomp16

./: .gitignore  CMakeLists.txt  README.md
inc/: byteReader.h  disassembler.h  disassemblerTest.h
src/: byteReader.c  disassembler.c  dissasemblerTest.c  main.c
